update netatalk exploit layout

--- a/app/src/main/res/layout/fragment_netatalk.xml
+++ b/app/src/main/res/layout/fragment_netatalk.xml
@@ -27,7 +27,7 @@
         android:layout_width="399dp"
         android:layout_height="116dp"
         android:background="@color/offWhite"
-        android:text="Any unauthenticated client can use commands to copy files from any part of the filesystem to a chosen destination. \n\nThe copy commands are executed with the rights of the ProFTPD service, which runs under the privileges of the 'nobody' user by default.\n\n"
+        android:text="The Apple Filing Protocol (AFP) server running on the remote host is affected by a remote code execution vulnerability due to a buffer overflow condition when handling an OpenSession request. \nAn unauthenticated, remote attacker can exploit this issue, via a specially crafted message, to execute arbitrary code.\n\n"
         android:textColor="@color/maroon"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/description_header"
@@ -55,7 +55,7 @@
         android:layout_marginTop="28dp"
         android:background="@color/offWhite"
         android:checked="true"
-        android:text="`touch PoCFile`"
+        android:text="Open unauthorized session"
         app:layout_constraintEnd_toEndOf="@+id/description"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/description"
