--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="26dp"
-        android:text="Home View"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -34,8 +33,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
-            android:layout_width="241dp"
-            android:layout_height="88dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.widget.Space
                 android:layout_width="5dp"
@@ -45,8 +44,8 @@
                 android:id="@+id/LibrarySizeTextView"
                 android:layout_width="150dp"
                 android:layout_height="120dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginRight="15dp"
                 android:clickable="false"
                 android:text="# \n\n exploits loaded in the library"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -71,7 +70,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <android.widget.Space
                 android:layout_width="20dp"
@@ -81,8 +80,8 @@
                 android:id="@+id/RegisteredTargetsTextView"
                 android:layout_width="150dp"
                 android:layout_height="120dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginRight="15dp"
                 android:clickable="false"
                 android:text="# \n\n targets available to exploit"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -108,27 +107,76 @@
     </TableLayout>
 
     <TextView
-        android:id="@+id/graphTitle"
-        android:layout_width="wrap_content"
+        android:id="@+id/idTVHead"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
-        android:text="Session History"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/historyChart"
-        app:layout_constraintVertical_bias="1" />
+        android:layout_margin="4dp"
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="Exploit Engagement History"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="362dp" />
 
-    <ImageView
-        android:id="@+id/historyChart"
-        android:layout_width="264dp"
-        android:layout_height="250dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:srcCompat="@drawable/img_matplotlib_pie1" />
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pieChart"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_below="@id/idTVHead"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:layout_constraintTop_toBottomOf="@id/tableLayout"
+        app:layout_constraintStart_toStartOf="@id/tableLayout"
+        app:layout_constraintEnd_toEndOf="@id/tableLayout"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/pieChart"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="628dp"
+        app:layout_constraintTop_toBottomOf="@id/pieChart">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/ic_circle"
+            android:drawableTint="@color/green"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="Success"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/ic_circle"
+            android:drawableTint="@color/yellow"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="Inconclusive"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/ic_circle"
+            android:drawableTint="@color/dustyRed"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="Failure"
+            android:textAlignment="center" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
